# ray_tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: buildcheck_cpp.yml
include/: camera.hpp  color.hpp  interval.hpp  mainheader.hpp  material.hpp  ray.hpp  sphere.hpp  traced.hpp  traced_list.hpp  vec3.hpp
src/: main  ppm_image.cpp
